Set up printing and fixed overflow issues.

--- a/src/styles/resumeStyles.css
+++ b/src/styles/resumeStyles.css
@@ -9,34 +9,39 @@
 
 .resume-page{
     margin: 5%;
-    outline: solid black;
-    width: 210mm;
-    max-height: 297mm;
-    padding: 0.5in 0.75in 0.75in 0.75in;    
+    box-shadow: 0px 12px 28px 0px rgba(0, 0, 0, 0.2), 0px 2px 4px 0px rgba(0, 0, 0, 0.1), 0px 0px 0px 1px rgba(255, 255, 255, 0.05) inset;
+    /* width: 210mm;
+    max-height: 297mm; */
+    /* height: 80vh; */
+    height: fit-content;
+    width:50%;
+    padding: 0.25in 0.5in 0.5in 0.5in;
+    /* padding: 0.5in 0.75in 0.75in 0.75in;     */
 }
 
 .contact-container{
     display: flex;
     flex-direction: column;
     align-items: center;  
+    font-size: 0.7vw;
 }
 
 .contact-container > *{
-    padding: 3px;
+    padding: 2px;
     margin: 0;
 }
 .skill-container-inside{
     display: flex;
     align-items: center;
-    font-size: 18px;
+    font-size: 0.7vw;
 }
 
 .skill-container-inside *{
     padding: 0;
     margin: 0;
 }
-.work-block .project-block, .study-block{
-    font-size: 18px;
+.work-block, .project-block, .study-block{
+    font-size: 0.7vw;
 }
 
 .work-block > h3, .project-block > h3, .study-block > h4{
@@ -63,4 +68,116 @@ li{
 }
 .study-block > h4{
     margin-top: 0;
+}
+
+
+
+@media print{
+    .resume-container{
+    flex: 1.5;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;    
+
+}
+
+.resume-page{
+    margin: 5%;
+
+    /* width: 210mm;
+    max-height: 297mm; */
+    /* height: 80vh; */
+    height: fit-content;
+    width:50%;
+    padding: 0.25in 0.5in 0.5in 0.5in;
+    /* padding: 0.5in 0.75in 0.75in 0.75in;     */
+    
+}
+
+.contact-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;  
+    font-size: 0.7vw;
+}
+
+.contact-container > *{
+    padding: 2px;
+    margin: 0;
+}
+.skill-container-inside{
+    display: flex;
+    align-items: center;
+    font-size: 0.7vw;
+}
+
+.skill-container-inside *{
+    padding: 0;
+    margin: 0;
+}
+.work-block, .project-block, .study-block{
+    font-size: 0.7vw;
+}
+
+.work-block > h3, .project-block > h3, .study-block > h4{
+    margin-bottom:10px;
+}
+
+
+.work-container > ul, .projects-container > ul, .education-container > ul{
+    list-style: none;
+    padding: 0;
+    line-height: 1.3;
+}
+
+.work-duties, .project-details, .study-details{
+    list-style:disc;
+}
+
+li{
+    word-wrap: break-word;
+}
+
+.study-block > h3{
+    margin-bottom: 0;
+}
+.study-block > h4{
+    margin-top: 0;
+}
+}
+
+@media print {
+    @page:first {
+        margin-top: 0.5in;
+    }
+    @page{
+        margin-top: 1in;
+    }
+
+    .form-container{
+        display: none;
+    }
+    .resume-container{
+        height: 100vh;
+        width: 100vw;
+    }
+
+    .resume-page{
+    width: 210mm;
+    height: 297mm; 
+    /* padding: 0.5in 0.75in 0.75in 0.75in; */
+     
+    box-shadow: none; 
+    }
+    .contact-container{
+    font-size: 18px;
+    }
+    .work-block, .project-block, .study-block, .skill-container-inside{
+        font-size: 18px;
+    }
+    header, footer {
+        display: none;
+    }
+    
 }
